--- a/client/components/Navigation/Link.css
+++ b/client/components/Navigation/Link.css
@@ -1,5 +1,3 @@
-@import url('font-awesome/css/font-awesome.css');
-
 .link {
   cursor: pointer;
   width: 40px;
@@ -16,13 +14,13 @@
 }
 
 .home {
-  composes: fa fa-home;
+  composes: fa fa-home from 'font-awesome/css/font-awesome.css';
 }
 
 .settings {
-  composes: fa fa-cog;
+  composes: fa fa-cog from 'font-awesome/css/font-awesome.css';
 }
 
 .audio {
-  composes: fa fa-music;
+  composes: fa fa-music from 'font-awesome/css/font-awesome.css';
 }
