--- a/client/containers/Audio/components/SoundDropzone.css
+++ b/client/containers/Audio/components/SoundDropzone.css
@@ -1,6 +1,7 @@
 .dropzone {
   height: 100%;
   width: 100%;
+  z-index: 10;
 }
 
 .container {
@@ -13,6 +14,7 @@
   height: 40px;
   width: 500px;
   cursor: pointer;
+  user-select: none;
 }
 
 .progress {
@@ -27,6 +29,19 @@
   display: flex;
   color: white;
   font-size: 16px;
+}
+
+.name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  color: white;
 }
 
 .addSound {
