--- a/client/containers/Audio/components/SoundList.css
+++ b/client/containers/Audio/components/SoundList.css
@@ -3,4 +3,17 @@
   background-color: rgba(49, 144, 154, 0.7);
   border-radius: 4px;
   border: 1px solid color(#31909a l(40%));
+  position: relative;
+}
+
+.moire {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background-color: rgba(68, 54, 84, 0.6);
+
+  transition: opacity 300ms;
 }
