Add actions for change uploaded sound name. Add validation for unique name. Add action for clear uploaded sound

--- a/client/containers/Audio/components/SoundDropzone.css
+++ b/client/containers/Audio/components/SoundDropzone.css
@@ -16,6 +16,10 @@
   cursor: pointer;
   user-select: none;
   margin-bottom: 20px;
+
+  &:hover {
+    background-color: rgba(215, 232, 111, 0.6);
+  }
 }
 
 .progress {
