--- a/client/components/PlayStopBtn/styles.css
+++ b/client/components/PlayStopBtn/styles.css
@@ -1,18 +1,3 @@
-.container {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-}
-
-.play {
-  composes: fa fa-play from 'font-awesome/css/font-awesome.css';
-}
-
-.stop {
-  composes: fa fa-stop from 'font-awesome/css/font-awesome.css';
+.button {
+  font-size: 20px !important;
 }
