--- a/client/containers/Audio/components/SoundDropzone.css
+++ b/client/containers/Audio/components/SoundDropzone.css
@@ -2,6 +2,10 @@
   height: 100%;
   width: 100%;
   z-index: 10;
+
+  &:hover {
+    background-color: rgba(119, 120, 232, 0.6);
+  }
 }
 
 .container {
@@ -9,17 +13,13 @@
   flex-direction: row;
   position: relative;
   border-radius: 4px;
-  background-color: rgba(111, 154, 232, 0.6);
+  background-color: rgba(111, 154, 232, 0.4);
   border: 1px dashed dodgerblue;
-  height: 40px;
-  width: 500px;
+  height: 80px;
+  width: 600px;
   cursor: pointer;
   user-select: none;
   margin-bottom: 20px;
-
-  &:hover {
-    background-color: rgba(215, 232, 111, 0.6);
-  }
 }
 
 .progress {
@@ -36,17 +36,18 @@
   font-size: 16px;
 }
 
-.name {
+.uploaded {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   color: white;
+  padding-left: 40px;
 }
 
 .addSound {
@@ -57,12 +58,11 @@
   bottom: 0;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 
 .plusIcon {
-  composes: fa fa-plus-circle from 'font-awesome/css/font-awesome.css';
   font-size: 18px;
   margin-right: 10px;
 }
