Uploaded sound error handling. Buttons for upload file and clear. Use custom name for save sound

--- a/client/components/Icon/styles.css
+++ b/client/components/Icon/styles.css
@@ -13,3 +13,7 @@
 .plusCircle {
   composes: fa fa-plus-circle from 'font-awesome/css/font-awesome.css';
 }
+
+.cloudUpload {
+  composes: fa fa-cloud-upload from 'font-awesome/css/font-awesome.css';
+}
