--- a/client/containers/Audio/components/SoundDropzone.css
+++ b/client/containers/Audio/components/SoundDropzone.css
@@ -4,7 +4,7 @@
   z-index: 10;
 
   &:hover {
-    background-color: rgba(119, 120, 232, 0.6);
+    background-color: rgba(232, 193, 136, 0.6);
   }
 }
 
@@ -51,6 +51,7 @@
 }
 
 .addSound {
+  color: white;
   position: absolute;
   left: 0;
   right: 0;
@@ -59,6 +60,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   font-size: 20px;
 }
 
