--- a/client/components/Icon/styles.css
+++ b/client/components/Icon/styles.css
@@ -17,3 +17,7 @@
 .cloudUpload {
   composes: fa fa-cloud-upload from 'font-awesome/css/font-awesome.css';
 }
+
+.checkCircle {
+  composes: fa fa-check-circle-o from 'font-awesome/css/font-awesome.css';
+}
