--- a/client/components/Icon/styles.css
+++ b/client/components/Icon/styles.css
@@ -14,6 +14,10 @@
   composes: fa fa-plus-circle from 'font-awesome/css/font-awesome.css';
 }
 
+.plus {
+  composes: fa fa-plus from 'font-awesome/css/font-awesome.css';
+}
+
 .cloudUpload {
   composes: fa fa-cloud-upload from 'font-awesome/css/font-awesome.css';
 }
