--- a/client/containers/Settings/components/TeamcityMenu.css
+++ b/client/containers/Settings/components/TeamcityMenu.css
@@ -1,4 +1,6 @@
+@import url('../../../../node_modules/react-toolbox/lib/slider/theme.css');
+
 .ellipsisIcon {
   font-size: 20px;
-  color: white;
+  color: var(--palette-grey-500);
 }
