--- a/client/containers/Settings/EditTeamcityDialog/styles.css
+++ b/client/containers/Settings/EditTeamcityDialog/styles.css
@@ -1,3 +1,13 @@
 .dialog {
   width: 600px;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+.scrollArea {
+  height: 400px;
+  max-height: 400px;
+}
